[package]
name = "bb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["rustls", "blocking"] }
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.87"
